<resources>
    <string name="app_name">Hallo</string>
    <string name="title_home">Home</string>
    <string name="title_reminder">Reminder</string>
    <string name="title_todolist">To do list</string>
    <string name="title_settings">Settings</string>
    <string name="todolist_emptylist">Nothing to do</string>
    <string name="todolist_cancel">Cancel</string>
    <string name="todolist_save">Save</string>
    <string name="todolist_title">Title</string>
    <string name="todolist_listhint">each line is a todo item</string>
    <string name="todolist_titlehint">Title of list</string>
    <string name="todolist_adddialogheader">Add Todo list</string>
    <string name="todolist_updatedialogheader">Todo list</string>
    <string name="todolist_editdialogheader">Edit Todo list</string>

    <string name="reminderlist_emptylist">No Reminders</string>
    <string name="reminderlist_repeatmon">Monday</string>
    <string name="reminderlist_repeattue">Tuesday</string>
    <string name="reminderlist_repeatwed">Wednesday</string>
    <string name="reminderlist_repeatthu">Thursday</string>
    <string name="reminderlist_repeatfri">Friday</string>
    <string name="reminderlist_repeatsat">Saturday</string>
    <string name="reminderlist_repeatsun">Sunday</string>
    <string name="close">Close</string>

    <string-array name="languages">
        <item>Select language</item>
        <item>English</item>
        <item>华语</item>
        <item>Bahasa Melayu</item>
    </string-array>


</resources>
