<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AddReminderActivity">

    <ListView
        android:id="@android:id/list"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">
    </ListView>

    <TextView
        android:id="@+id/nameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="27dp"
        android:padding="5dp"
        android:text="Name Of Reminder"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTxt"
        android:id="@+id/title"
        android:inputType=""
        android:textAppearance="?android:attr/textAppearanceLarge"  />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:text="DATE"
        android:id="@+id/in_date"
        android:layout_marginTop="40dp"
        android:inputType=""
        android:layout_toRightOf="@+id/dateimg"
        android:textAppearance="?android:attr/textAppearanceLarge"  />

    <ImageView
        android:id="@+id/dateimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/title"
        android:src="@drawable/round_date_range_black_24dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SELECT DATE"
        android:id="@+id/btn_date"
        android:layout_alignBottom="@+id/in_date"
        android:layout_toRightOf="@+id/in_date"
        android:layout_toEndOf="@+id/in_date" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/in_date"
        android:text="TIME"
        android:id="@+id/in_time"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/timeimg"
        android:inputType=""
        android:textAppearance="?android:attr/textAppearanceLarge"  />

    <ImageView
        android:id="@+id/timeimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/in_date"
        android:layout_marginTop="30dp"
        android:src="@drawable/round_access_time_black_24dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SELECT TIME"
        android:id="@+id/btn_time"
        android:layout_alignBottom="@+id/in_time"
        android:layout_toRightOf="@+id/in_time"
        android:layout_toEndOf="@+id/in_time" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:text="Add Reminder"
        android:textAppearance="?android:attr/textAppearanceLarge"  />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:layout_toLeftOf="@+id/submitBtn"
        android:text="Cancel"
        android:textAppearance="?android:attr/textAppearanceLarge"  />

    <ImageView
        android:id="@+id/repeatimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/in_time"
        android:src="@drawable/round_refresh_black_24dp" />

    <CheckBox
        android:id="@+id/chkMon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/repeatimg"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@id/in_time"
        android:text="@string/reminderlist_repeatmon"
        android:checked="true"  />

    <CheckBox
        android:id="@+id/chkTue"
        android:layout_below="@id/chkMon"
        android:layout_toRightOf="@+id/repeatimg"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminderlist_repeattue"/>

    <CheckBox
        android:id="@+id/chkWed"
        android:layout_toRightOf="@+id/repeatimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_below="@id/chkTue"
        android:text="@string/reminderlist_repeatwed" />

    <CheckBox
        android:id="@+id/chkThu"
        android:layout_toRightOf="@+id/repeatimg"
        android:layout_below="@id/chkWed"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminderlist_repeatthu" />

    <CheckBox
        android:id="@+id/chkFri"
        android:layout_toRightOf="@+id/repeatimg"
        android:layout_below="@id/chkThu"
        android:layout_width="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_height="wrap_content"
        android:text="@string/reminderlist_repeatfri" />

    <CheckBox
        android:id="@+id/chkSat"
        android:layout_toRightOf="@+id/repeatimg"
        android:layout_below="@id/chkFri"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminderlist_repeatsat" />

    <CheckBox
        android:id="@+id/chkSun"
        android:layout_toRightOf="@+id/repeatimg"
        android:layout_below="@id/chkSat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/reminderlist_repeatsun" />
</RelativeLayout>
